--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,3 @@
 app-name = "acme"
-csv-path = ${?CSV_PATH}
-// csv-path = "C:\\Users\\Indra\\Documents\\ingestion\\path.csv"
+//csv-path = ${?CSV_PATH}
+csv-path = "/home/ernestochero/Documents/notes/testing-path.csv"
