Updated some methods and deleted zio library

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,4 @@
 app-name = "acme"
 //csv-path = ${?CSV_PATH}
-csv-path = "/home/ernestochero/Documents/notes/testing-path.csv"
+//csv-path = "/home/ernestochero/Documents/notes/testing-path.csv"
+csv-path = "C:\\Users\\Indra\\Documents\\ingestion\\path.csv"
